fix issue #132. Close #132 Fix text on quiz screen that was being cut off by button size

--- a/src/main/resources/design/startScreen.css
+++ b/src/main/resources/design/startScreen.css
@@ -79,5 +79,5 @@
 }
 
 #missingInfoText {
-    -fx-font-size: 25.0;
+    -fx-font-size: 36.0;
 }
